<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#E0F4FF"
    android:onClick="linearOnClick">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time_set"
            android:layout_marginTop="50dp"
            android:textColor="#0092E0"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/약속기간을_선택하세요"
            android:textColor="#0092E0"
            android:textSize="20sp"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/startTextView"
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/시작일"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="monospace" />

                <TextView
                    android:id="@+id/pickStartDate"
                    android:layout_width="170dp"
                    android:layout_height="30dip"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:hint="@string/시작일을_선택하세요"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/endTextView"
                    android:layout_width="70dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/종료일"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="monospace" />

                <TextView
                    android:id="@+id/pickEndDate"
                    android:layout_width="170dip"
                    android:layout_height="30dip"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:clickable="true"
                    android:hint="@string/종료일을_선택하세요"
                    android:typeface="monospace" />
            </LinearLayout>

            <Button
                android:id="@+id/okay"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/ok"
                android:background="@drawable/xml_round_button"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                android:onClick="onClick"
                android:typeface="monospace" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
