<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F4FF"
    android:gravity="center"
    android:onClick="linearOnClick"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="회원가입"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:textColor="#0092E0"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/xml_edit_box"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/idText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_toStartOf="@+id/validateButton"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/validateButton"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:background="@drawable/xml_round_button"
                android:onClick="onClick"
                android:text="@string/idcheck"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d7dae1"/>

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d7dae1" />

        <EditText
            android:id="@+id/passwordconfirmText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/passwordconfirm"
            android:inputType="textPassword"
            android:padding="10dp"
            android:typeface="monospace" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/xml_round_button"
            android:onClick="onClick"
            android:text="가입"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/xml_round_grey_button"
            android:onClick="onClick"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />


    </LinearLayout>

</LinearLayout>