<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#E0F4FF"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#0092E0"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_below="@+id/textView"
            android:src="@drawable/icon" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <EditText
            android:id="@+id/idText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/idText"
            android:layout_marginTop="17dp"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:typeface="monospace" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="자동로그인"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/passwordText"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox"
            android:layout_marginTop="10dp"
            android:background="@drawable/xml_round_button"
            android:onClick="onClick"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />


        <TextView
            android:id="@+id/btnRegist"
            android:layout_width="130dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="#E0F4FF"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/register"
            android:textColor="#0092E0"
            android:textSize="17sp"
            android:textStyle="bold"
            android:typeface="monospace" />



    </RelativeLayout>
</RelativeLayout>